examples/errors/Errors.bat
:: To run the C# script, use dotnet-script:
dotnet script Errors.csx

:: To run the F# script, use dotnet fsi:
dotnet fsi Errors.fsx
